[project]
name = "runpod_exp"
version = "0.1.0"
description = "RunPod CUDA13 Python 3.13 environment for amort_debug"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pyyaml>=6.0.2",
    "pyro-ppl>=1.9.1",
    "torch>=2.10.0",
    "torchdiffeq>=0.2.5",
    "wandb>=0.25.1",
    "numpyro[cuda13]>=0.20.0",
]
